# KernelPatch

./: .clang-format  .gitignore  README.md  README_zh-CN.md  banner  detect.c  doxyfile  preset.h  version
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug--can-t-boot.md  bug--patch-failed---device-name---device-kerenl-version--.md  bug--patch-failed.md
.github/workflows/: build.yml  build_dev.yml  build_kpm_demo.yml
doc/: build.md  module.md
doc/en/: build.md  guide.md  inline-hook.md  module.md  super-command.md  super-syscall.md  syscall-hook.md
doc/pt-BR/: build.md  guide.md  module.md
doc/zh-CN/: build.md  guide.md  inline-hook.md  module.md  super-command.md  super-syscall.md  syscall-hook.md
doc/zh-cn/: build.md  guide.md  module.md
kernel/: .gitignore  Kconfig  Makefile  kpimg.lds  setup.sh  version
kernel/accctl/: accctl.c  accctl.h  lsmhook.c  scdefs.h  selinuxhook.c  supercall.c  taskext.c  taskext.h  taskob.c
kernel/base/: baselib.c  cache.S  entry.S  fphook.c  hmem.c  hmem.h  hook.c  hotpatch.c  log.c  map.c  map1.S  patching.c  predata.c  preset.h  setup.c  setup.h  setup1.S  start.c  start.h  symbol.c  tlsf.c
kernel/include/: barrier.h  baselib.h  cache.h  common.h  compiler.h  ctype.h  error.h  hook.h  hotpatch.h  inlinestring.h  io.h  kallsyms.h  kpmalloc.h  kpmodule.h  ktypes.h  log.h  patching.h  pgtable.h  predata.h  preset.h  sha256.h  stdarg.h  stdbool.h  stddef.h  stdint.h  symbol.h  tlsf.h
kernel/init/: init.c  init.h  ksyms.h  struct.h
kernel/init/accctl/: accctl.c  lsmhook.c  selinuxhook.c  sucompat.c  supercall.c
kernel/init/android/: sucompat.c  supercall.c
kernel/init/ext/: syscall.c  taskext.c  taskob.c
kernel/init/extend/: lsmext.c  syscall.c  taskob.c
kernel/init/include/: accctl.h  ksyms.h  syscall.h  taskext.h  taskob.h
kernel/init/ksyms/: misc.c  misc_len.c  security.c  selinux.c
kernel/init/struct/: task_cred.c
kernel/minc/: ctype.h  print.c  print.h  stdio.h  stdlib.c  stdlib.h  string.c  string.h
kernel/module/: .gitignore  module.c  module.h
kernel/module/hello/: Makefile  hello.c
kernel/patch/: apatch.c  patch.c  patch.h
kernel/patch/accctl/: accctl.c  selinuxhook.c  sepolicy.c  supercall.c
kernel/patch/android/: gen.sh  kpuserd.c  sepolicy_flags.c  sucompat.c  sucompat.c1  supercall.c  supercmd.c  user_init.c  user_init.sh  userd.c
kernel/patch/common/: accctl.c  extrainit.c  hotpatch.c  kstorage.c  pidmem.c  pmem.c  secpass.c  selinuxhook.c  selinuxhook.c.bak  sucompat.c  sucompat.c.bak  supercall.c  supercall_trampoline.S  supercmd.c  syscall.c  sysname.c  test.c  (+3 more)
kernel/preset/: preset.h
kernel/supercall/: Makefile  supercall.c
kernel/syscall/: supercall.c  supercall.h  syscall.c  syscall.h
kpm-demo/hello/: hello.c
kpm-demo/inlinehook/: inlinehook.c
kpm-demo/phys_access/: Makefile  main.c
kpm-demo/shmem/: link.lds  main.c
kpm-demo/stat-fs/: Makefile  main.c
kpm-demo/syscallhook/: Makefile  syscallhook.c
kpms/: .gitignore
kpms/demo-hello/: Makefile
kpms/demo-inlinehook/: .gitignore  Makefile  Package.cs  README.md  demo-inlinehook.csproj  inlinehook.c
kpms/demo-syscallhook/: .gitignore  syscallhook.c
kpms/fstat/: Makefile  fstat.h  main.c
kpms/make-shamiko-happy/: Makefile  main.c
tools/: .gitignore  CMakeLists.txt  Makefile  bootimg.c  bootimg.h  common.c  common.h  fls_ffs.h  image.c  image.h  insn.c  insn.h  kallsym.c  kallsym.h  kpm.c  kpm.h  kptools.c  order.c  order.h  patch.c  patch.h  ptrace.h  symbol.c  symbol.h  version
tools/elf/: elf-em.h  elf.h
tools/lib/bz2/: bzlib.c  bzlib.h
tools/lib/lz4/: lz4file.c  lz4frame.c  lz4hc.c
tools/lib/sha/: sha1.c  sha1.h  sha256.c  sha256.h
user/: .gitignore  CMakeLists.txt  Makefile  apjni.cpp  build_android.sh  kpatch.c  kpatch.h  kpm.c  kpm.h  libkp.c  libkp.h  main.c  su.c  su.h  sumgr.c  sumgr.h  supercall.h  supercall_ge0a04.h  version
user/android/: android_user.c  android_user.h  apjni.cpp  sumgr.c  sumgr.h  user_init.c  user_init.h
user_deprecated/: CMakeLists.txt  kpatch.c  kpatch.h  kpm.h  su.c  su.h  supercall.h  supercall_ge0a04.h
user_deprecated/android/: android_user.h  sumgr.c
(+169 files in other folders)
